--- a/includes/trivia.html
+++ b/includes/trivia.html
@@ -8,7 +8,7 @@
     <title>Ofir's Quiz Game</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="general.css">
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 
 <body>
@@ -16,11 +16,11 @@
     <div class="container">
         <div class="box">
             <h1 id="question"></h1>
-            <h3 id="choice1"></h3>
-            <h3 id="choice2"></h3>
-            <h3 id="choice3"></h3>
-            <h3 id="choice4"></h3>
-
+            <h3 class="choice" id="choice1"></h3>
+            <h3 class="choice"></h3>
+            <h3 class="choice"></h3>
+            <h3 class="choice"></h3>
+<p></p>
         </div>
 
     </div>
@@ -33,7 +33,7 @@
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous"></script>
 
-<script src="game.js" ></script>
+<script src="../js/trivia.js" ></script>
 
 
 </html>
