--- a/includes/endgame.html
+++ b/includes/endgame.html
@@ -8,26 +8,27 @@
     <title>Ofir's Quiz Game</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="general.css">
+        
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/trivia.css">
+
 </head>
 
 <body>
 
     <div class="container">
         <div class="box">
-
-            <h1 class="heading">Welcome to Ofir's quizzes</h1>
-            <h2 class="heading">Enter your name to continue</h2>
+            <img style="width: 50%; margin-left: auto; margin-right: auto; display: block;" src="../images/logo.png"
+                alt="">
             <div style="margin: auto;" class="col-md-4 mb-3 mt-3">
-                <input type="text" class="form-control" id="firstName" placeholder="John" required
-                       pattern="[A-Za-z]{1,10}" maxlength="10" name="firstName">
+                <button>Play Again</button>
+                <button>Highscores</button>
+                <button>My Profile</button>
 
             </div>
 
         </div>
-
     </div>
-
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -35,14 +36,8 @@
     crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous"></script>
-<script>
 
-
-
-
-
-
-</script>
+<script src="../js/trivia.js"></script>
 
 
 </html>
