--- a/includes/triviawelcome.html
+++ b/includes/triviawelcome.html
@@ -12,6 +12,7 @@
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="../css/index.css">
 </head>
 
@@ -24,11 +25,13 @@
             <h1 class="heading">Welcome,&nbsp;<span id="name"> </span></h1>
             <h2 class="heading">That's not me!</h2>
 
-            <h2 class="heading">Choose a Category</h2>
 
-
-            <div class="btn-choices categories">
-                <button name="9" class="btn-choice"><span class="material-icons">psychology</span>General Knowledge</button>
+            <div class="btn-choices categories animate__animated">
+                <div>
+                <h2 class="heading">Choose a Category</h2>
+            </div>
+                <button name="9" class="btn-choice"><span class="material-icons">psychology</span>General
+                    Knowledge</button>
                 <button name="10" class="btn-choice"><span class="material-icons">auto_stories</span>Books</button>
                 <button name="11" class="btn-choice"><span class="material-icons">videocam</span>Film</button>
                 <button name="12" class="btn-choice">
@@ -84,30 +87,29 @@
                 <button name="31" class="btn-choice">Japanese Anime & Manga</button>
                 <button name="32" class="btn-choice">Cartoon & Animations</button>
 
-                <h2 class="heading">Or Choose All of Them</h2>
-
-                <button name="all" class="btn-choice">ALL</button>
-
+                <div class="all-cat">
+                    <button name="all" class="btn-choice">ALL</button>
+                </div>
             </div>
 
-            <div class="btn-choices amount">
-               <button name="10" class="btn-choice">10</button>
-               <button name="20" class="btn-choice">20</button>
-               <button name="30" class="btn-choice">30</button>
-               <button name="40" class="btn-choice">40</button>
-               <button name="50" class="btn-choice">50</button>
-               <button name="other" class="btn-choice">Other</button>
-               <button name="random" class="btn-choice">Random</button>
+            <div class="btn-choices amount animate__animated">
+                <button name="10" class="btn-choice">10</button>
+                <button name="20" class="btn-choice">20</button>
+                <button name="30" class="btn-choice">30</button>
+                <button name="40" class="btn-choice">40</button>
+                <button name="50" class="btn-choice">50</button>
+                <button name="other" class="btn-choice">Other</button>
+                <button name="random" class="btn-choice">Random</button>
             </div>
 
-            <div class="btn-choices difficulty">
+            <div class="btn-choices difficulty animate__animated">
                 <button name="easy" class="btn-choice">Easy</button>
                 <button name="medium" class="btn-choice">Medium</button>
                 <button name="hard" class="btn-choice">Hard</button>
                 <button name="all" class="btn-choice">All</button>
-             </div>
+            </div>
 
-             <!-- <div class="btn-choices type">
+            <!-- <div class="btn-choices type">
                 <button name="multiple" class="btn-choice">Multiple</button>
                 <button name="boolean" class="btn-choice">True / False</button>
                 <button name="any" class="btn-choice">Any</button>
