--- a/includes/trivia.html
+++ b/includes/trivia.html
@@ -8,6 +8,15 @@
     <title>Ofir's Quiz Game</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
+
+    <link href='https://css.gg/trophy.css' rel='stylesheet'>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/trivia.css">
@@ -27,36 +36,75 @@
 
             <div style="height: 100%;" class="game hide">
                 <div style="height: 20%;" class="row header">
-                    <div class="col-4">
-                        <p class="qNum"> Question Number 5/6 </p>
+                    <div class="col-4 user_data">
+                        <div class="icon">
+                            <i class="fa-solid fa-hashtag fa-xl"></i>
+                            <p style="margin:0; margin-left:5px;">lala</p>
+                        </div>
+
+                        <div style="height: 2rem; border-radius: 50px;" class="progress">
+                            
+                            <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="100"
+                                aria-valuemin="0" aria-valuemax="100"><i style="margin-right: 5px;" class="fa-regular fa-clock"></i> 30</div>
+                        </div>
+
                     </div>
                     <div class="col-4">
 
                         <img style="width: 80%; margin-left: auto; margin-right: auto; display: block;"
                             src="../images/logo.png" alt="">
                     </div>
-                    <div class="col-4">
 
-                        <p>player: <span id="name"></span></p>
-                        <p>score</p>
-                        <p>End</p>
+                    <div class="col-4 user_data">
+                        <div class="icon">
+                            <i class="fa-solid fa-user-large fa-xl"></i>
+                            <p class="player" style="margin:0; margin-left:5px;">lala</p>
+
+                        </div>
+
+                        <div class="icon">
+                            <i class="fa-solid fa-trophy fa-xl"></i>
+                            <p class="score" style="margin:0; margin-left:5px;">lala</p>
+
+                        </div>
+
+                        <!-- <div class="exit icon">
+                            <i class="fa-solid fa-power-off fa-xl"></i>
+                        </div> -->
+
+                        <!--                         
+                        <i class="bi bi-trophy"></i>
+                        <span class="material-icons material-icons-outlined">
+                            emoji_events
+                            </span>
+                        <p><span class="material-icons">emoji_events</span> 
+                            <span class="material-icons material-icons-two-tone">
+                                emoji_events
+                                </span>
+                            
+                        <i class="gg-trophy"></i><span id="name"></span></p> -->
+
+                        <!-- <p>score</p> -->
+
                     </div>
                     <hr class="line">
 
                 </div>
-                <div style="height: 60%;" class="gameQ">
+                <div style="height: 60%;" class="gameQ animate__animated">
                     <div class="row">
 
                         <h1 id="question"></h1>
                     </div>
                     <div style="justify-content: center;" class="row btn-first-2">
 
-                        <button style="width: 30%; height: 70px; margin-right: 4%;" class="choice mt-3 animate__animated"></button>
+                        <button style="width: 30%; height: 70px; margin-right: 4%;"
+                            class="choice mt-3 animate__animated"></button>
                         <button style="width: 30%; height: 70px;" class="choice mt-3 animate__animated"></button>
                     </div>
                     <div style="justify-content: center;" class="row btn-last-2">
 
-                        <button style="width: 30%; height: 70px; margin-right: 4%;" class="choice mt-3 animate__animated"></button>
+                        <button style="width: 30%; height: 70px; margin-right: 4%;"
+                            class="choice mt-3 animate__animated"></button>
                         <button style="width: 30%; height: 70px;" class="choice mt-3 animate__animated"></button>
                     </div>
                 </div>
