--- a/includes/triviawelcome.html
+++ b/includes/triviawelcome.html
@@ -9,7 +9,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
-    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -21,16 +20,27 @@
     <div class="container">
 
         <div class="box">
+            <div class="row">
+                <div class="col-4">
+                    <img style="width: 80%; margin-left: auto; margin-right: auto; display: block;"
+                    src="../images/logo.png" alt="">
+                </div>
+                <div class="col-4">
+                <h1 class="heading">Welcome,&nbsp;<span id="name"> </span></h1>
+                <h2 class="heading">That's not me!</h2>
+            </div>
+            <div class="col-4">
+            </div>
 
-            <h1 class="heading">Welcome,&nbsp;<span id="name"> </span></h1>
-            <h2 class="heading">That's not me!</h2>
+            </div>
 
-
-            <div class="btn-choices categories animate__animated">
-                <div>
+            <div class="row">
                 <h2 class="heading">Choose a Category</h2>
             </div>
-                <button name="9" class="btn-choice"><span class="material-icons">psychology</span>General
+
+            <div class="row btn-choices categories animate__animated">
+
+                <button style="transition: 2s;" name="9" class="btn-choice"><span class="material-icons">psychology</span>General
                     Knowledge</button>
                 <button name="10" class="btn-choice"><span class="material-icons">auto_stories</span>Books</button>
                 <button name="11" class="btn-choice"><span class="material-icons">videocam</span>Film</button>
@@ -92,7 +102,7 @@
                 </div>
             </div>
 
-            <div class="btn-choices amount animate__animated">
+            <div class="btn-choices amount animate__animated hide">
                 <button name="10" class="btn-choice">10</button>
                 <button name="20" class="btn-choice">20</button>
                 <button name="30" class="btn-choice">30</button>
@@ -102,7 +112,7 @@
                 <button name="random" class="btn-choice">Random</button>
             </div>
 
-            <div class="btn-choices difficulty animate__animated">
+            <div class="btn-choices difficulty animate__animated hide">
                 <button name="easy" class="btn-choice">Easy</button>
                 <button name="medium" class="btn-choice">Medium</button>
                 <button name="hard" class="btn-choice">Hard</button>
@@ -115,7 +125,7 @@
                 <button name="any" class="btn-choice">Any</button>
              </div> -->
 
-            <button style="display: block; margin: auto;" class="btn-quiz mt-4 mb-3" type="submit">
+            <button style="display: block; margin: auto;" class="btn-quiz mt-4 mb-3 hide" type="submit">
                 Go
             </button>
 
@@ -124,7 +134,7 @@
     </div>
 
 </body>
-
+<script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
