--- a/includes/triviawelcome.html
+++ b/includes/triviawelcome.html
@@ -12,7 +12,15 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Secular+One&family=Sora&display=swap"
+        rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&family=Roboto&family=Secular+One&family=Sora&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/welcometrivia.css">
 </head>
 
 <body>
@@ -20,104 +28,104 @@
     <div class="container">
 
         <div class="box">
-            <div class="row">
+            <div class="row header header-row">
                 <div class="col-4">
                     <img style="width: 80%; margin-left: auto; margin-right: auto; display: block;"
-                    src="../images/logo.png" alt="">
+                        src="../images/logo.png" alt="">
                 </div>
                 <div class="col-4">
-                <h1 class="heading">Welcome,&nbsp;<span id="name"> </span></h1>
-                <h2 class="heading">That's not me!</h2>
-            </div>
-            <div class="col-4">
-            </div>
+                    <h1 class="header welcome">Welcome,&nbsp;<span id="name"> </span></h1>
+                    <h2 class="header change-user">That's not me!</h2>
+                </div>
+                <div class="col-4">
+                </div>
 
             </div>
+            <div class="center">
 
-            <div class="row">
-                <h2 class="heading">Choose a Category</h2>
-            </div>
+                <div class="row btn-choices categories animate__animated">
+                    <h2 class="header choose-categ">Choose a Category</h2>
 
-            <div class="row btn-choices categories animate__animated">
+                    <button name="9" id="try" class="btn-choice"><span class="material-icons">psychology</span>General
+                        Knowledge</button>
+                    <button name="10" class="btn-choice"><span class="material-icons">auto_stories</span>Books</button>
+                    <button name="11" class="btn-choice"><span class="material-icons">videocam</span>Film</button>
+                    <button name="12" class="btn-choice">
+                        <span class="material-icons">audiotrack</span>
+                        Music</button>
+                    <button name="13" class="btn-choice"><span class="material-icons">
+                            theaters
+                        </span>Musicals & Theaters</button>
+                    <button name="14" class="btn-choice"><span class="material-icons">
+                            tv
+                        </span>Television</button>
+                    <button name="15" class="btn-choice"><i class="fa-solid fa-gamepad fa-lg material-icons"></i>Video
+                        Games</button>
+                    <button name="16" class="btn-choice"><span class="material-icons">
+                            casino
+                        </span>Board Games</button>
+                    <button name="17" class="btn-choice"><span class="material-icons">
+                            science
+                        </span>Science & Nature</button>
+                    <button name="19" class="btn-choice"><span class="material-icons">
+                            computer
+                        </span>Computers</button>
+                    <button name="20" class="btn-choice"><span class="material-icons">
+                            calculate
+                        </span>Mathematics</button>
+                    <button name="21" class="btn-choice">Mythology</button>
+                    <button name="22" class="btn-choice"><span class="material-icons">
+                            sports_soccer
+                        </span>Sports</button>
+                    <button name="23" class="btn-choice"><span class="material-icons">
+                            public
+                        </span>Geography</button>
+                    <button name="24" class="btn-choice"><span class="material-icons">
+                            history
+                        </span>History</button>
+                    <button name="25" class="btn-choice"><span class="material-icons">
+                            gavel
+                        </span>Politics</button>
+                    <button name="26" class="btn-choice"><span class="material-icons">
+                            brush
+                        </span>Art</button>
+                    <button name="27" class="btn-choice">Celebrities</button>
+                    <button name="28" class="btn-choice"><span class="material-icons">
+                            cruelty_free
+                        </span>Animals</button>
+                    <button name="29" class="btn-choice"><span class="material-icons">
+                            directions_car_filled
+                        </span>Vehicles</button>
+                    <button name="30" class="btn-choice"><span class="material-icons">
+                            watch
+                        </span>Gadgets</button>
+                    <button name="31" class="btn-choice">Japanese Anime & Manga</button>
+                    <button name="32" class="btn-choice">Cartoon & Animations</button>
 
-                <button style="transition: 2s;" name="9" class="btn-choice"><span class="material-icons">psychology</span>General
-                    Knowledge</button>
-                <button name="10" class="btn-choice"><span class="material-icons">auto_stories</span>Books</button>
-                <button name="11" class="btn-choice"><span class="material-icons">videocam</span>Film</button>
-                <button name="12" class="btn-choice">
-                    <span class="material-icons">audiotrack</span>
-                    Music</button>
-                <button name="13" class="btn-choice"><span class="material-icons">
-                        theaters
-                    </span>Musicals & Theaters</button>
-                <button name="14" class="btn-choice"><span class="material-icons">
-                        tv
-                    </span>Television</button>
-                <button name="15" class="btn-choice"><span class="material-icons">
-                        live_tv
-                    </span>Video Games</button>
-                <button name="16" class="btn-choice"><span class="material-icons">
-                        casino
-                    </span>Board Games</button>
-                <button name="17" class="btn-choice"><span class="material-icons">
-                        science
-                    </span>Science & Nature</button>
-                <button name="19" class="btn-choice"><span class="material-icons">
-                        computer
-                    </span>Computers</button>
-                <button name="20" class="btn-choice"><span class="material-icons">
-                        calculate
-                    </span>Mathematics</button>
-                <button name="21" class="btn-choice">Mythology</button>
-                <button name="22" class="btn-choice"><span class="material-icons">
-                        sports_soccer
-                    </span>Sports</button>
-                <button name="23" class="btn-choice"><span class="material-icons">
-                        public
-                    </span>Geography</button>
-                <button name="24" class="btn-choice"><span class="material-icons">
-                        history
-                    </span>History</button>
-                <button name="25" class="btn-choice"><span class="material-icons">
-                        gavel
-                    </span>Politics</button>
-                <button name="26" class="btn-choice"><span class="material-icons">
-                        brush
-                    </span>Art</button>
-                <button name="27" class="btn-choice">Celebrities</button>
-                <button name="28" class="btn-choice"><span class="material-icons">
-                        cruelty_free
-                    </span>Animals</button>
-                <button name="29" class="btn-choice"><span class="material-icons">
-                        directions_car_filled
-                    </span>Vehicles</button>
-                <button name="30" class="btn-choice"><span class="material-icons">
-                        watch
-                    </span>Gadgets</button>
-                <button name="31" class="btn-choice">Japanese Anime & Manga</button>
-                <button name="32" class="btn-choice">Cartoon & Animations</button>
+                    <div class="all-cat">
+                        <button name="all" class="btn-choice">ALL</button>
+                    </div>
 
-                <div class="all-cat">
-                    <button name="all" class="btn-choice">ALL</button>
+                </div>
+
+                <div class="row btn-choices amount animate__animated hide">
+                    <h2 class="header choose-categ">Choose how many questions</h2>
+                    <button name="10" class="btn-choice">10</button>
+                    <button name="20" class="btn-choice">20</button>
+                    <button name="30" class="btn-choice">30</button>
+                    <button name="40" class="btn-choice">40</button>
+                    <button name="50" class="btn-choice">50</button>
+                    <button name="other" class="btn-choice">Other</button>
+                    <button name="random" class="btn-choice">Random</button>
                 </div>
             </div>
 
-            <div class="btn-choices amount animate__animated hide">
-                <button name="10" class="btn-choice">10</button>
-                <button name="20" class="btn-choice">20</button>
-                <button name="30" class="btn-choice">30</button>
-                <button name="40" class="btn-choice">40</button>
-                <button name="50" class="btn-choice">50</button>
-                <button name="other" class="btn-choice">Other</button>
-                <button name="random" class="btn-choice">Random</button>
-            </div>
-
-            <div class="btn-choices difficulty animate__animated hide">
+            <!-- <div class="btn-choices difficulty animate__animated hide">
                 <button name="easy" class="btn-choice">Easy</button>
                 <button name="medium" class="btn-choice">Medium</button>
                 <button name="hard" class="btn-choice">Hard</button>
                 <button name="all" class="btn-choice">All</button>
-            </div>
+            </div> -->
 
             <!-- <div class="btn-choices type">
                 <button name="multiple" class="btn-choice">Multiple</button>
