--- a/css/index.css
+++ b/css/index.css
@@ -1,34 +1,3 @@
-/* body{
-    background-color:;
-} */
-*{
-  box-sizing: border-box;
-}
-
-.box {
-  width: 100%;
-  height: 700px;
-  padding: 20px;
-  border-radius: 6px;
-  box-shadow: 0 0 8px gray;
-  margin-top: 7%;
-  /* margin-bottom: 7%; */
-  background-color: #005f73;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.heading {
-  display: flex;
-  justify-content: center;
-  vertical-align: middle;
-}
-
-/* .box:hover{
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-} */
-
 
 .btn-quiz {
   align-items: center;
@@ -78,113 +47,22 @@
   color: rgba(0, 0, 0, .3);
 }
 
-
-
-/* CSS */
-.btn-choice {
-  align-items: center;
-  appearance: none;
-  background-color: #adb5bd;
-  border-radius: 24px;
-  border-style: none;
-  box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px,rgba(0, 0, 0, .14) 0 6px 10px 0,rgba(0, 0, 0, .12) 0 1px 18px 0;
-  box-sizing: border-box;
-  color: #3c4043;
-  cursor: pointer;
-  display: inline-flex;
-  fill: currentcolor;
-  font-family: "Google Sans",Roboto,Arial,sans-serif;
-  font-size: 14px;
-  font-weight: 500;
-  height: 48px;
-  justify-content: center;
-  letter-spacing: .25px;
-  line-height: normal;
-  max-width: 100%;
-  overflow: visible;
-  padding: 2px 24px;
-  position: relative;
-  text-align: center;
-  text-transform: none;
-  transition: box-shadow 280ms cubic-bezier(.4, 0, .2, 1),opacity 15ms linear 30ms,transform 270ms cubic-bezier(0, 0, .2, 1) 0ms;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  width: auto;
-  will-change: transform,opacity;
-  z-index: 0;
-  margin-top: 10px;
-  margin-right: 10px;
-}
-
-.btn-choices{
-  padding-right: 70px;
-  padding-left: 70px;
-
-}
-
-.btn-choice:hover {
-  background: #F6F9FE;
-  color: #174ea6;
-}
-
-.btn-choice:active {
-  box-shadow: 0 4px 4px 0 rgb(60 64 67 / 30%), 0 8px 12px 6px rgb(60 64 67 / 15%);
-  outline: none;
-}
-
-.btn-choice:focus {
-  outline: none;
-  border: 2px solid #4285f4;
-}
-
-.btn-choice:not(:disabled) {
-  box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
-}
-
-.btn-choice:not(:disabled):hover {
-  box-shadow: rgba(60, 64, 67, .3) 0 2px 3px 0, rgba(60, 64, 67, .15) 0 6px 10px 4px;
-}
-
-.btn-choice:not(:disabled):focus {
-  box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
-}
-
-.btn-choice:not(:disabled):active {
-  box-shadow: rgba(60, 64, 67, .3) 0 4px 4px 0, rgba(60, 64, 67, .15) 0 8px 12px 6px;
-}
-
-.btn-choice:disabled {
-  box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
-}
-
 .material-icons{
   margin-right: 5px;
-}
-
-.hide{
-  display: none !important;
-}
-
-.gameQ{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.line{
-  border: 5px solid white;
-  border-radius: 5px;
-  margin: 0px;
-}
-
-.categories{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
 }
 
 .all-cat{
   display: flex;
   justify-content: center;
+}
+
+/* .header{
+  height: 20%;
+  align-items: center;
+} */
+
+.form-control:focus, .form-control:hover{
+  border: none;
+  outline: none;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
