--- a/includes/endgame.html
+++ b/includes/endgame.html
@@ -9,8 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         
-    <link rel="stylesheet" href="../css/index.css">
-    <link rel="stylesheet" href="../css/trivia.css">
+    <link rel="stylesheet" href="../css/style.css">
 
 </head>
 
@@ -20,13 +19,11 @@
         <div class="box">
             <img style="width: 50%; margin-left: auto; margin-right: auto; display: block;" src="../images/logo.png"
                 alt="">
-            <div style="margin: auto;" class="col-md-4 mb-3 mt-3">
-                <button>Play Again</button>
-                <button>Highscores</button>
-                <button>My Profile</button>
-
+            <div style="margin: auto;" class="mb-3 mt-3 choices">
+                <button name="play" class="choice">Play Again</button>
+                <button name="highscores" class="choice">Highscores</button>
+                <button name="profile" class="choice">My Profile</button>
             </div>
-
         </div>
     </div>
 </body>
@@ -37,7 +34,7 @@
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous"></script>
 
-<script src="../js/trivia.js"></script>
+<script src="../js/endgame.js"></script>
 
 
 </html>
