--- a/includes/trivia.html
+++ b/includes/trivia.html
@@ -15,10 +15,13 @@
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Secular+One&family=Sora:wght@300&display=swap" rel="stylesheet"> 
     <link href='https://css.gg/trophy.css' rel='stylesheet'>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/trivia.css">
 
 </head>
@@ -29,7 +32,7 @@
         <div class="box">
 
             <div class="loadin d-flex justify-content-center">
-                <div style="width: 3rem; height: 3rem;" class="spinner-border" role="status">
+                <div style="width: 3rem; height: 3rem;" class="spinner-border text-light" role="status">
                     <span class="visually-hidden">Loading...</span>
                 </div>
             </div>
@@ -39,32 +42,34 @@
                     <div class="col-4 user_data">
                         <div class="icon">
                             <i class="fa-solid fa-hashtag fa-xl"></i>
-                            <p style="margin:0; margin-left:5px;">lala</p>
+                            <p class="progress-num" style="margin:0; margin-left:15px;">Question <span
+                                    class="currentQ"></span> out of <span class="maxQ"></span></p>
                         </div>
 
-                        <div style="height: 2rem; border-radius: 50px;" class="progress">
-                            
-                            <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="100"
-                                aria-valuemin="0" aria-valuemax="100"><i style="margin-right: 5px;" class="fa-regular fa-clock"></i> 30</div>
+                        <div style="height: 40px; border-radius: 50px;" class="progress">
+
+                            <div class="progress-bar bg-success" role="progressbar" style="width: 100%"
+                                aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><i style="margin-right: 5px;"
+                                    class="fa-regular fa-clock"></i> 30</div>
                         </div>
 
                     </div>
                     <div class="col-4">
 
-                        <img style="width: 80%; margin-left: auto; margin-right: auto; display: block;"
+                        <img style="width: -webkit-fill-available; margin-left: auto; margin-right: auto; display: block;"
                             src="../images/logo.png" alt="">
                     </div>
 
                     <div class="col-4 user_data">
                         <div class="icon">
                             <i class="fa-solid fa-user-large fa-xl"></i>
-                            <p class="player" style="margin:0; margin-left:5px;">lala</p>
+                            <span class="player" style="margin:0; margin-left:15px;"></span>
 
                         </div>
 
                         <div class="icon">
                             <i class="fa-solid fa-trophy fa-xl"></i>
-                            <p class="score" style="margin:0; margin-left:5px;">lala</p>
+                            <span class="score" style="margin:0; margin-left:15px;"></span>
 
                         </div>
 
@@ -87,33 +92,63 @@
                         <!-- <p>score</p> -->
 
                     </div>
-                    <hr class="line">
 
                 </div>
-                <div style="height: 60%;" class="gameQ animate__animated">
+                <div style="height: 60%;" class="gameQ row animate__animated">
                     <div class="row">
 
                         <h1 id="question"></h1>
                     </div>
                     <div style="justify-content: center;" class="row btn-first-2">
 
-                        <button style="width: 30%; height: 70px; margin-right: 4%;"
-                            class="choice mt-3 animate__animated"></button>
-                        <button style="width: 30%; height: 70px;" class="choice mt-3 animate__animated"></button>
+                        <button class="choice mt-3 animate__animated choice-left choice-hover"></button>
+
+                        <button class="choice mt-3 animate__animated choice-hover"></button>
                     </div>
                     <div style="justify-content: center;" class="row btn-last-2">
 
-                        <button style="width: 30%; height: 70px; margin-right: 4%;"
-                            class="choice mt-3 animate__animated"></button>
-                        <button style="width: 30%; height: 70px;" class="choice mt-3 animate__animated"></button>
+                        <button class="choice mt-3 animate__animated choice-left choice-hover"></button>
+
+                        <button class="choice mt-3 animate__animated choice-hover"></button>
                     </div>
                 </div>
+
                 <div style="height: 20%;" class="toolbox row">
-                    <hr class="line">
-                    <h1>Your Help Toolbox</h1>
+                    <div class="row">
+                        <h1>Your Help Toolbox</h1>
+                    </div>
+                    <div class="row">
+
+                    </div>
                 </div>
             </div>
+
+            <div style="position: absolute; left: 0; right: 0; text-align: center;" class="yes hide">
+                <p style="font-size: 150px; color: white;" class="plus animate__animated animate__bounceIn">+10</p>
+            </div>
+
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Nice Job!</p>
+                            <p>You got <span class="correctNum"></span> out of <span class="maxQ"></span></p>
+                            <p>with a score of <span class="score"></span></p>
+                            <button>Play Again</button>
+                            <button>Go to Menu</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
+    </div>
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
