--- a/includes/triviawelcome.html
+++ b/includes/triviawelcome.html
@@ -35,7 +35,9 @@
                 </div>
                 <div class="col-4">
                     <h1 class="header welcome">Welcome,&nbsp;<span id="name"> </span></h1>
-                    <h2 class="header change-user">That's not me!</h2>
+                    <a style="text-decoration: none;" href="../index.html">
+                        <h2 class="header change-user">That's not me!</h2>
+                    </a>
                 </div>
                 <div class="col-4">
                 </div>
@@ -118,6 +120,12 @@
                     <button name="other" class="btn-choice">Other</button>
                     <button name="random" class="btn-choice">Random</button>
                 </div>
+
+                <div class="row go">
+                    <button class="btn-quiz mt-4 mb-3 hide" type="submit">
+                        Stat a Game <i class="fa-solid fa-arrow-right"></i>
+                    </button>
+                </div>
             </div>
 
             <!-- <div class="btn-choices difficulty animate__animated hide">
@@ -133,9 +141,7 @@
                 <button name="any" class="btn-choice">Any</button>
              </div> -->
 
-            <button style="display: block; margin: auto;" class="btn-quiz mt-4 mb-3 hide" type="submit">
-                Go
-            </button>
+
 
         </div>
 
@@ -151,5 +157,6 @@
 
 <script src="../js/index.js"></script>
 <script src="../js/triviawelcome.js"></script>
+<script src="../js/redirect.js"></script>
 
 </html>
