--- a/css/welcometrivia.css
+++ b/css/welcometrivia.css
@@ -1,38 +1,69 @@
-/* CSS */
 .btn-choice {
     align-items: center;
-    appearance: none;
     background-color: #adb5bd;
     border-radius: 24px;
     border-style: none;
     box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px, rgba(0, 0, 0, .14) 0 6px 10px 0, rgba(0, 0, 0, .12) 0 1px 18px 0;
     box-sizing: border-box;
     color: #3c4043;
-    cursor: pointer;
     display: inline-flex;
-    fill: currentcolor;
     font-family: "Google Sans", Roboto, Arial, sans-serif;
-    font-size: 14px;
-    font-weight: 500;
-    height: 48px;
     justify-content: center;
     letter-spacing: .25px;
     line-height: normal;
-    max-width: 100%;
-    overflow: visible;
     padding: 2px 24px;
-    position: relative;
     text-align: center;
-    text-transform: none;
-    transition: box-shadow 280ms cubic-bezier(.4, 0, .2, 1), opacity 15ms linear 30ms, transform 270ms cubic-bezier(0, 0, .2, 1) 0ms;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    width: auto;
-    will-change: transform, opacity;
-    z-index: 0;
     margin-top: 10px;
     margin-right: 10px;
+    transition: all 400ms ease-in-out;
+    height: 48px;
+    font-size: 14px;
+    font-weight: 500;
+    max-width: 100%;
+    width: auto;
+}
+
+.row{
+    margin: 0;
+}
+
+.btn-choice-after {
+    background: black;
+    color: white;
+    width: 300px;
+    height: 63px;
+    font-size: large;
+}
+
+.btn-choice:hover {
+    background: black;
+    color: white;
+}
+
+/* .btn-choice:focus {
+    background: black;
+    color: white;
+    width: 300px;
+    height: 63px;
+    font-size: large;
+} */
+
+.btn-choice:visited {
+    background: black;
+    color: white;
+    width: 300px;
+    height: 63px;
+    font-size: large;
+
+}
+
+.btn-choice:checked {
+    background: black;
+    color: white;
+    width: 300px;
+    height: 63px;
+    font-size: large;
+
 }
 
 .btn-choices {
@@ -41,49 +72,49 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-
 }
 
-.btn-choice:hover {
-    background: #F6F9FE;
-    color: #174ea6;
+.go {
+    padding-right: 100px;
+    padding-left: 100px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
-.btn-choice:active {
-    box-shadow: 0 4px 4px 0 rgb(60 64 67 / 30%), 0 8px 12px 6px rgb(60 64 67 / 15%);
-    outline: none;
+.fa-arrow-right {
+    margin-left: 15px;
+    margin-top: 10px;
 }
 
-.btn-choice:focus {
-    outline: none;
-    border: 2px solid #4285f4;
+.btn-quiz {
+    align-items: center;
+    background-color: #0a9396;
+    border: 0;
+    border-radius: 100px;
+    box-sizing: border-box;
+    color: #ffffff;
+    display: inline-flex;
+    font-family: -apple-system, system-ui, system-ui, "Segoe UI", Roboto, "Helvetica Neue", "Fira Sans", Ubuntu, Oxygen, "Oxygen Sans", Cantarell, "Droid Sans", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Lucida Grande", Helvetica, Arial, sans-serif;
+    font-size: 50px;
+    height: 100px;
+    font-weight: 600;
+    justify-content: center;
+    line-height: 20px;
+    max-width: 480px;
+    min-height: 40px;
+    min-width: 0px;
+    overflow: hidden;
+    text-align: center;
+    box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px, rgba(0, 0, 0, .14) 0 6px 10px 0, rgba(0, 0, 0, .12) 0 1px 18px 0;
 }
 
-.btn-choice:not(:disabled) {
-    box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
-}
-
-.btn-choice:not(:disabled):hover {
-    box-shadow: rgba(60, 64, 67, .3) 0 2px 3px 0, rgba(60, 64, 67, .15) 0 6px 10px 4px;
-}
-
-.btn-choice:not(:disabled):focus {
-    box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
-}
-
-.btn-choice:not(:disabled):active {
-    box-shadow: rgba(60, 64, 67, .3) 0 4px 4px 0, rgba(60, 64, 67, .15) 0 8px 12px 6px;
-}
-
-.btn-choice:disabled {
-    box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
-}
 
 .center {
     display: flex;
     flex-direction: column;
     height: 80%;
-    margin-top: 70px;
+    justify-content: space-evenly;
 }
 
 .header {
@@ -91,11 +122,13 @@
     justify-content: center;
     vertical-align: middle;
     color: #F6F9FE;
+
 }
 
 .header-row {
     align-items: center;
-    margin-top: 20px;
+    background-color: black;
+    height: 20%;
 }
 
 .welcome {
@@ -105,6 +138,7 @@
 .change-user {
     font-family: 'Sora', sans-serif;
     font-size: 20px;
+    color: #8d99ae;
 }
 
 .all-cat {
@@ -123,4 +157,25 @@
 
 .amount {
     margin-top: 20px;
+}
+
+@keyframes arrow-jump {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+        -webkit-transform: translateX(10px);
+        -moz-transform: translateX(10px);
+        -o-transform: translateX(10px);
+        transform: translateX(10px);
+    }
+}
+
+.fa-arrow-right {
+    -webkit-animation: arrow-jump 1s infinite;
+    -moz-animation: arrow-jump 1s infinite; 
+    -o-animation: arrow-jump 1s infinite;
+    animation: arrow-jump 1s infinite;
 }
