--- a/includes/leaderboard.html
+++ b/includes/leaderboard.html
@@ -8,6 +8,7 @@
     <title>Ofir's Quiz Game</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet">
 
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/leaderboard.css">
@@ -35,33 +36,78 @@
             <div class="tab-content" id="myTabContent">
                 <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
                     <div class="leaderboard">
-                        <div class="highscoreTitle one">
-                            <span>Rank</span><span>Name</span><span>Score</span>
 
-                        </div>
-                        <div class="highscore two">
-                            <span class="rank">1</span><span class="name"></span><span class="score"></span>
-                        </div>
-
-                        <div class="highscore two">
-                            <span class="rank"></span><span class="name"></span><span class="score"></span>
+                        <div class="row highscoreTitle">
+                            <div class="col-4"><span>Rank</span></div>
+                            <div class="col-4"><span>Name</span></div>
+                            <div class="col-4"><span>Score</span></div>
                         </div>
 
-                        <div class="highscore three">
-                            <span class="rank"></span><span class="name"></span><span class="score"></span>
+                        <div class="row highscore">
+                            <div class="col-4">
+                                <span class="rank">
+                                    <span class="fa-stack" style="vertical-align: top;">
+                                        <i class="fa-solid fa-circle fa-stack-2x"></i>
+                                        <i class="fa-solid fa-1 fa-stack-1x fa-inverse"></i>
+                                    </span>
+                                </span>
+                            </div>
+                            <div class="col-4">
+                                <span class="name"></span>
+                            </div>
+                            <div class="col-4">
+                                <span class="score"></span>
+                            </div>
                         </div>
 
-                        <div class="highscore four">
-                            <span class="rank"></span><span class="name"></span><span class="score"></span>
+                        <div class="row highscore two">
+                            <div class="col-4"><span class="rank">
+                                    <span class="fa-stack" style="vertical-align: top;">
+                                        <i class="fa-solid fa-circle fa-stack-2x"></i>
+                                        <i class="fa-solid fa-2 fa-stack-1x fa-inverse"></i>
+                                    </span>
+                                </span>
+                            </div>
+                            <div class="col-4">
+                                <span class="name"></span>
+                            </div>
+                            <div class="col-4">
+                                <span class="score"></span>
+                            </div>
+                        </div>
+                        
+                        <div class="row highscore three">
+                            <div class="col-4"><span class="rank"> <span class="fa-stack" style="vertical-align: top;">
+                                        <i class="fa-solid fa-circle fa-stack-2x"></i>
+                                        <i class="fa-solid fa-3 fa-stack-1x fa-inverse"></i>
+                                    </span></span></div>
+                            <div class="col-4"><span class="name"></span></div>
+                            <div class="col-4"><span class="score"></span></div>
                         </div>
 
-                        <div class="highscore five">
-                            <span class="rank"></span><span class="name"></span><span class="score"></span>
+                        <div class="row highscore four">
+                            <div class="col-4"><span class="rank"> <span class="fa-stack" style="vertical-align: top;">
+                                        <i class="fa-solid fa-circle fa-stack-2x"></i>
+                                        <i class="fa-solid fa-4 fa-stack-1x fa-inverse"></i>
+                                    </span></span> </div>
+                            <div class="col-4"><span class="name"></span></div>
+                            <div class="col-4"><span class="score"></span></div>
+                        </div>
+
+                        <div class="row highscore five">
+                            <div class="col-4"> <span class="rank"> <span class="fa-stack" style="vertical-align: top;">
+                                        <i class="fa-solid fa-circle fa-stack-2x"></i>
+                                        <i class="fa-solid fa-5 fa-stack-1x fa-inverse"></i>
+                                    </span></span> </div>
+                            <div class="col-4"><span class="name"></span></div>
+                            <div class="col-4"><span class="score"></span></div>
                         </div>
                     </div>
                 </div>
-                <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">...</div>
-                <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
+                <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">...
+                </div>
+                <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...
+                </div>
             </div>
 
         </div>
