--- a/includes/trivia.html
+++ b/includes/trivia.html
@@ -10,6 +10,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -115,9 +116,24 @@
 
                 <div style="height: 20%;" class="toolbox row">
                     <div class="row">
-                        <h1>Your Help Toolbox</h1>
+                        <h1 style="color: white; font-size: large; margin-top: 10px;">Your Help Toolbox</h1>
                     </div>
-                    <div class="row">
+
+                    <div class="row toolbox-icons">
+                        <span class="fa-stack fa-2x fifty" title="50/50 - Reavel 2 wrong answers!"  data-bs-toggle="tooltip" data-bs-placement="top">
+                            <i class="fa-solid icon-back fa-circle fa-stack-2x"></i>
+                            <i class="fa-solid fa-eraser fa-stack-1x fa-inverse icon-color"></i>
+                          </span>
+
+                          <span class="fa-stack fa-2x show-answer" title="Get a free answer!"  data-bs-toggle="tooltip" data-bs-placement="top">
+                            <i class="fa-solid icon-back fa-circle fa-stack-2x"></i>
+                            <i class="fa-solid fa-arrows-rotate fa-stack-1x fa-inverse icon-color"></i>
+                          </span>
+
+                          <span class="fa-stack fa-2x extra-time" title="Get 10 seconds extra time!"  data-bs-toggle="tooltip" data-bs-placement="top">
+                            <i class="fa-solid icon-back fa-circle fa-stack-2x"></i>
+                            <i class="fa-solid fa-hourglass-end fa-stack-1x fa-inverse icon-color"></i>
+                          </span>
 
                     </div>
                 </div>
@@ -128,24 +144,20 @@
             </div>
 
             <!-- Modal -->
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+            <div class="modal fade" id="end-menu" tabindex="-1" aria-labelledby="end-menu" data-bs-backdrop="static" data-bs-keyboard="false"
                 aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
                         <div class="modal-body">
-                            <p>Nice Job!</p>
-                            <p>You got <span class="correctNum"></span> out of <span class="maxQ"></span></p>
-                            <p>with a score of <span class="score"></span></p>
-                            <button>Play Again</button>
-                            <button>Go to Menu</button>
+                            <h1>Nice Job!</h1>
+                            <p style="font-size: 20px;" class="summery">You got <span class="correctNum"></span> out of <span class="maxQ"></span> questions</p>
+                            <p style="font-size: 20px;" class="summery">With a score of <span class="score"></span></p>
+                            <button style="display: block; margin: auto;" class="button-18 play-again mt-3">Play Again</button>
+                            <button style="display: block; margin: auto;" class="button-18 menu mt-3">Go to Menu</button>
                         </div>
                     </div>
                 </div>
             </div>
-
 
         </div>
     </div>
