--- a/includes/trivia.html
+++ b/includes/trivia.html
@@ -18,14 +18,15 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Secular+One&family=Sora:wght@300&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Secular+One&family=Sora:wght@300&display=swap"
+        rel="stylesheet">
     <link href='https://css.gg/trophy.css' rel='stylesheet'>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/trivia.css">
     <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
-    
+
 
 </head>
 
@@ -59,8 +60,7 @@
                     </div>
                     <div class="col-4">
 
-                        <img style="width: -webkit-fill-available; margin-left: auto; margin-right: auto; display: block;"
-                            src="../images/logo.png" alt="">
+                        <img class="logo" src="../images/logo.png" alt="">
                     </div>
 
                     <div class="col-4 user_data">
@@ -122,20 +122,23 @@
                     </div>
 
                     <div class="row toolbox-icons">
-                        <span class="fa-stack fa-2x fifty animate__animated" title="50/50 - Reavel 2 wrong answers!"  data-bs-toggle="tooltip" data-bs-placement="top">
+                        <span class="fa-stack fa-2x fifty animate__animated" title="50/50 - Reavel 2 wrong answers!"
+                            data-bs-toggle="tooltip" data-bs-placement="top">
                             <i class="fa-solid icon-back fa-circle fa-stack-2x"></i>
                             <i class="fa-solid fa-eraser fa-stack-1x fa-inverse icon-color"></i>
-                          </span>
+                        </span>
 
-                          <span class="fa-stack fa-2x show-answer animate__animated" title="Get a free answer!"  data-bs-toggle="tooltip" data-bs-placement="top">
+                        <span class="fa-stack fa-2x show-answer animate__animated" title="Get a free answer!"
+                            data-bs-toggle="tooltip" data-bs-placement="top">
                             <i class="fa-solid icon-back fa-circle fa-stack-2x"></i>
                             <i class="fa-solid fa-arrows-rotate fa-stack-1x fa-inverse icon-color"></i>
-                          </span>
+                        </span>
 
-                          <span class="fa-stack fa-2x extra-time animate__animated" title="Get 10 seconds extra time!"  data-bs-toggle="tooltip" data-bs-placement="top">
+                        <span class="fa-stack fa-2x extra-time animate__animated" title="Get 10 seconds extra time!"
+                            data-bs-toggle="tooltip" data-bs-placement="top">
                             <i class="fa-solid icon-back fa-circle fa-stack-2x"></i>
                             <i class="fa-solid fa-hourglass-end fa-stack-1x fa-inverse icon-color"></i>
-                          </span>
+                        </span>
 
                     </div>
                 </div>
@@ -146,16 +149,19 @@
             </div>
 
             <!-- Modal -->
-            <div class="modal fade" id="end-menu" tabindex="-1" aria-labelledby="end-menu" data-bs-backdrop="static" data-bs-keyboard="false"
-                aria-hidden="true">
+            <div class="modal fade" id="end-menu" tabindex="-1" aria-labelledby="end-menu" data-bs-backdrop="static"
+                data-bs-keyboard="false" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
                         <div class="modal-body">
                             <h1>Nice Job!</h1>
-                            <p style="font-size: 20px;" class="summery">You got <span class="correctNum"></span> out of <span class="maxQ"></span> questions</p>
+                            <p style="font-size: 20px;" class="summery">You got <span class="correctNum"></span> out of
+                                <span class="maxQ"></span> questions</p>
                             <p style="font-size: 20px;" class="summery">With a score of <span class="score"></span></p>
-                            <button style="display: block; margin: auto;" class="button-18 play-again mt-3">Play Again</button>
-                            <button style="display: block; margin: auto;" class="button-18 menu mt-3">Go to Menu</button>
+                            <button style="display: block; margin: auto;" class="button-18 play-again mt-3">Play
+                                Again</button>
+                            <button style="display: block; margin: auto;" class="button-18 menu mt-3">Go to
+                                Menu</button>
                         </div>
                     </div>
                 </div>
